# xfce4-finder

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac
css/: default.css
glade/: xfce4-finder.glade  xfce4-finder.glade~
scripts/: build-default-css-h  build-glade-h
src/: custom-css.h  xfce4-finder.cc
src/.deps/: program-xfce4-finder.Po  xfce4_finder-main-window.Po  xfce4_finder-xfce4-finder.Po
